--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "version": "1.0.0",
   "author": "Aravind Balla <bsaaravind@gmail.com>",
   "dependencies": {
+    "babel-plugin-styled-components": "^1.9.2",
     "gatsby": "^2.0.19",
     "gatsby-plugin-feed": "^2.0.8",
     "gatsby-plugin-google-analytics": "^2.0.5",
@@ -11,6 +12,7 @@
     "gatsby-plugin-offline": "^2.0.5",
     "gatsby-plugin-react-helmet": "^3.0.0",
     "gatsby-plugin-sharp": "^2.0.6",
+    "gatsby-plugin-styled-components": "^3.0.4",
     "gatsby-plugin-typography": "^2.2.0",
     "gatsby-remark-copy-linked-files": "^2.0.5",
     "gatsby-remark-images": "^2.0.4",
@@ -26,6 +28,7 @@
     "react-helmet": "^5.2.0",
     "react-spring": "^6.1.10",
     "react-typography": "^0.16.13",
+    "styled-components": "^4.1.2",
     "typeface-merriweather": "0.0.43",
     "typeface-montserrat": "0.0.43",
     "typography": "^0.16.17",
