--- a/package.json
+++ b/package.json
@@ -29,10 +29,7 @@
     "react-spring": "^6.1.10",
     "react-typography": "^0.16.13",
     "styled-components": "^4.1.2",
-    "typeface-merriweather": "0.0.43",
-    "typeface-montserrat": "0.0.43",
-    "typography": "^0.16.17",
-    "typography-theme-bootstrap": "^0.16.7"
+    "typography": "^0.16.17"
   },
   "devDependencies": {
     "eslint": "^4.19.1",
